--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8e30f1c6-5ab7-4782-994b-350027a529c8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
