--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/material": "^13.3.7",
     "@angular/router": "~13.3.0",
     "flowbite": "^1.4.7",
     "rxjs": "~7.5.0",
