--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.7",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.7",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/material": "^13.3.7",
     "@angular/router": "~13.3.0",
     "flowbite": "^1.4.7",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.19",
     "tailwindcss": "^3.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
